--- a/html/add_cart.html
+++ b/html/add_cart.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/cssreset.css">
 	<link rel="stylesheet" type="text/css" href="../css/add_cart.css">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<script src="../js/jquery-1.11.1.js"></script>
 	<script src="../js/add_cart.js"></script>
 	<script src="../fonts/font_1337982_3mjd8z175oo/iconfont.js"></script>
