--- a/html/skin_pro.html
+++ b/html/skin_pro.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/cssreset.css">
 	<link rel="stylesheet" type="text/css" href="../css/skin_pro.css">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<script src="../js/jquery-1.11.1.js"></script>
 	<script src="../js/skin_pro.js"></script>
 	<title>基础护理</title>
