--- a/html/login.html
+++ b/html/login.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/cssreset.css">
 	<link rel="stylesheet" type="text/css" href="../css/login.css">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<script src="../js/jquery-1.11.1.js"></script>
 	<script src="../js/login.js"></script>
 	<title>登陆注册</title>
