--- a/html/pay_for.html
+++ b/html/pay_for.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/cssreset.css">
 	<link rel="stylesheet" type="text/css" href="../css/pay_for.css">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<script src="../js/jquery-1.11.1.js"></script>
 	<script src="../js/pay_for.js"></script>
 	<title>结算</title>
