--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/cssreset.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<script src="js/jquery-1.11.1.js"></script>
 	<script src="js/index.js"></script>
 	<title>悦诗风吟官方网站</title>
